--- a/public/back/first.html
+++ b/public/back/first.html
@@ -23,8 +23,8 @@
             <li><a href="user.html"><i class="glyphicon glyphicon-user"></i> <span>用户管理</span></a></li>
             <li>
                 <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i> <span>分类管理</span></a>
-                <div class="child" style="display:none">
-                    <a href="first.html">一级分类</a>
+                <div class="child">
+                    <a href="first.html" class="current">一级分类</a>
                     <a href="second.html">二级分类</a>
                 </div>
             </li>
@@ -45,7 +45,8 @@
         
         <ol class="breadcrumb">
                 <li><a href="index.html">管理系统</a></li>
-                <li class="active">首页</li>
+                <li class="active">分类管理</li>
+                <li class="active">一级分类</li>
         </ol>
     </div>
 
@@ -72,12 +73,10 @@
           </div>
 </div>
 
-
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="./js/commont.js"></script>
-<script src="./js/index.js"></script>
 </body>
 </html>
