--- a/public/back/login.html
+++ b/public/back/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="./css/commont.css">
 </head>
-<body>
+<body class="body_bg">
     <div class="container">
         <!--面板-->
         <div class="col-lg-4 col-lg-offset-4 margin-t">
