--- a/public/back/user.html
+++ b/public/back/user.html
@@ -20,10 +20,10 @@
     </div>
     <div class="nav">
         <ul>
-            <li><a href="user.html"><i class="glyphicon glyphicon-user"></i> <span>用户管理</span></a></li>
+            <li><a href="user.html" class="current"><i class="glyphicon glyphicon-user"></i> <span>用户管理</span></a></li>
             <li>
                 <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i> <span>分类管理</span></a>
-                <div class="child" style="display:none">
+                <div class="child">
                     <a href="first.html">一级分类</a>
                     <a href="second.html">二级分类</a>
                 </div>
@@ -72,12 +72,10 @@
           </div>
 </div>
 
-
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
 <script src="./js/commont.js"></script>
-<script src="./js/index.js"></script>
 </body>
 </html>
