--- a/public/back/index.html
+++ b/public/back/index.html
@@ -70,13 +70,27 @@
               </div>
             </div>
           </div>
+
+    <!-- 柱状图 饼图-->
+    <!-- 为ECharts准备一个具备大小（宽高）的Dom -->
+    <div class="echart">
+        <div id="main1" class="pull-left" style="width: 550px;height:400px;"></div>
+        <div id="main2" class="pull-right" style="width: 550px;height:400px;"></div>
+    </div>
 </div>
+
+
+
+
+
+
 
 
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="./lib//echarts/echarts.min.js"></script>
 <script src="./js/commont.js"></script>
 <script src="./js/index.js"></script>
 </body>
