--- a/public/back/user.html
+++ b/public/back/user.html
@@ -47,7 +47,7 @@
                 <li><a href="index.html">管理系统</a></li>
                 <li class="active">首页</li>
         </ol>
-    </div>
+    
 
     <!-- 模态框 -->
     <div class="modal fade" tabindex="-1" id="logoutModal">
@@ -69,13 +69,75 @@
                 </div>
               </div>
             </div>
-          </div>
+    </div>
+
+    <!-- 表格 -->
+    <div class="it_table">
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th>序号</th>
+                    <th>用户名</th>
+                    <th>手机号</th>
+                    <th>状态</th>
+                    <th>操作</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- <tr>
+                    <td>1</td>
+                    <td>itcast</td>
+                    <td>15102324243</td>
+                    <td>正常</td>
+                    <td><button class="btn btn-danger">禁用</button></td>
+                </tr> -->
+            </tbody>
+            
+        </table>
+    </div>
+
+    <!-- 分页 -->
+    <div class="text-right">
+        <ul id="paginator" ></ul>
+    </div>
 </div>
+
+
+
+</div>
+<script type="text/html" id="tpl">
+    {{ each rows v i}}
+    <tr>
+       <td>{{i + 1}}</td>
+       <td>{{v.username}}</td>
+       <td>{{v.mobile}}</td>
+       <td>
+           {{v.isDelete === 1? '正常' : '禁用'}}
+        </td>
+        <td>
+        {{if v.isDelete === 1}}
+           <button class="btn btn-danger"> 禁用
+        {{else}}
+           <button class="btn btn-success"> 启用
+        {{/if}}
+        </td>
+    </tr>
+    {{/each}}
+</script>
+
+
+
+
+
+
 
 <script src="./lib/jquery/jquery.min.js"></script>
 <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
 <script src="./lib/nprogress/nprogress.js"></script>
+<script src="./lib/artTemplate/template-web.js"></script>
+<script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
 <script src="./js/commont.js"></script>
+<script src="./js/user.js"></script>
 </body>
 </html>
